[Fix] z-index der Blende

--- a/styles/grundgeruest.less
+++ b/styles/grundgeruest.less
@@ -25,7 +25,7 @@ html, body {
   font-size: 10px;
   padding: 2px 5px;
   text-align: center;
-  z-index: 1000;
+  z-index: 100000;
   transition: height 1s ease-in-out, background-color 250ms ease-in-out, color 250ms ease-in-out;
   height: 16px;
 }
@@ -105,7 +105,7 @@ body {
   top: 0px;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 1000000;
   overflow-y: scroll;
   display: none;
 }
